--- a/1번 문제.md
+++ b/1번 문제.md
@@ -1,1 +1,7 @@
+(1) 동시에 같은 DB Table row 를 업데이트 하는 상황을 방어하기 위해 어떻게 개발하실 건지 설명해주세요.
 
+DB에서 기본적으로 lock을 걸어서 막아주는 기능이 있지만, 이보다 높은 수준의 트랜잭션을 걸어야 한다면 상황에 따라 optimistic lock과 pessimistic lock을 고려해볼 수 있을 것 같습니다.
+
+optimistic lock은 낙관적인 락으로, version이나 key 등의 컬럼으로 구분하는 방법이고, pessimistic lock은 비관적인 락으로, 트랜잭션을 걸어 충돌을 예방하는 방법입니다.
+
+그 테이블 row가 어떤 측면에서 업데이트가 되는 것인지, 동기화가 얼마나 중요한지(얼마나 실시간으로 반영이 되어야 하는지), 정확도가 얼마나 중요한지, 성능이 얼마나 중요한지에 따라 적절히 선택하여 적용할 수 있을 것 같습니다.
