--- a/2번 문제.md
+++ b/2번 문제.md
@@ -1,1 +1,17 @@
+(2) TCP 와 UDP 의 차이를 작성해주세요.
 
+TCP와 UDP는 TCP/IP 5계층 중 Transport Layer에 있는 프로토콜입니다.
+
+TCP는 3 hand shaking으로 연결을 수립하고, 패킷을 얼마나 보낼지 미리 알려줍니다.
+
+응답받은 쪽에서 패킷의 순서를 맞춰보고, 빠뜨린 것이 있다면 재요청하기 때문에 신뢰성을 보장합니다.
+
+다만 이러한 특성 때문에 UDP에 비해 속도가 느릴 수 있습니다.
+
+연결을 4 hand shaking을 통해 연결을 끊습니다.
+
+UPD는 속도가 우선이기 때문에 영상통화나 스트리밍, 음성통화 같은 실시간으로 정보를 보내야할 때 주로 쓰입니다.
+
+속도가 빠른 대신 중간에 패킷이 누락되더라도 재요청하여 다시 받는 과정이 없기 때문에 신뢰성은 TCP에 비해 떨어질 수 있습니다.
+
+HTTP/3 이전에는 TCP 기반으로 연결하지만 HTTP/3부터는 UDP 기반이라고 합니다.
