--- a/3번 문제.md
+++ b/3번 문제.md
@@ -1,1 +1,16 @@
+(3) 웹 브라우저에 네이버 를 검색하고 화면에 네이버 화면이 출력이 될 때 까지 내부적으로 어떤 동작들이 수행이 되는지 설명해주세요.
 
+1. DNS resolver가 URL을 해석하여 DNS 서버에 메세지를 보낸다.
+2. DNS가 해당 URL에 대한 IP를 가지고 있으면 응답을 해주고, 없다면 다른 DNS를 소개시켜준다.
+3. 이는 해당 URL에 대한 IP를 가진 DNS 서버가 나올 때까지, 또는 Root DNS까지 반복된다.
+4. DNS가 IP를 응답해주면, 해당 IP로 HTTP 요청을 보낸다.
+5. HTTP 요청과 응답은 Head, Body로 구성되어 있고, 요청은 URL와 Method로 구분된다.
+6. TCP/IP 5계층을 거치며 TCP 헤더가 붙고, IP 헤더가 붙고.. 랜선을 통해 전자 신호로 바뀌어 스위치에서 스위치로 이동한다.
+7. 2번 문제에서 TCP 연결을 수립할 때 설명했듯이, 패킷을 얼마나 보낼지 미리 응답받는 서버와 이야기한다.
+8. 이 때 쓰이는 알고리즘이 크게 두 가지가 있는데, 하나는 가장 짧은 경로를 찾는 알고리즘이고, 하나는 가장 교통체증이 덜한 경로를 찾는 알고리즘이다.
+9. 서버에 패킷이 모두 도달하면 서버에서는 반대로 IP 헤더를 떼고, TCP 헤더를 떼고.. HTTP(주로 80번 포트)로 연결되어 정해진 HTTP 응답을 내려준다.
+10. 클라이언트가 이를 받아 브라우저에서 랜더링을 한다.
+11. 이 때 렌더링 엔진이 HTML 파일을 파싱하여 DOM Tree를 만들고, CSS파일을 파싱하여 CSSOM Tree를 만든다.
+12. 이를 조합한 Render Tree를 만들고 이에 따라 레이아웃을 계산하고 페인팅을 한다.
+13. JS 컴파일 엔진이 스크립트를 파싱하여 토큰화한 후 AST를 만들고, 이를 기반으로 한 바이트 코드를 JS 인터프리터가 한 줄씩 번역하며 돌아간다.
+14. JS를 통해 Render Tree가 변경되어 reflow나 repainting이 일어날 수 있다.
