--- a/4번 문제.md
+++ b/4번 문제.md
@@ -1,1 +1,4 @@
+(4) 본인이 주력으로 사용하는 언어에서 설계적 결함 한 가지를 작성해주세요.
 
+JS의 경우 null의 typeof 연산은 "object"인데, 이는 언어상 오류입니다. null은 객체가 아닙니다.
+이는 모던 Javascript 튜토리얼을 공부하다가 알게 되었습니다.
