--- a/5번 문제.md
+++ b/5번 문제.md
@@ -1,1 +1,13 @@
+(5) 본인이 주력으로 사용하는 언어에서 자료구조와 관련 된 클래스가 내부적으로 어떻게 동작하는지 한 가지 사례를 정하여 작성해주세요. ex) ArrayList, HashMap 등등
 
+C의 array같은 경우에는 딱 할당된 크기만큼의 연속된 배열을 가지기 때문에 같은 타입이어야만 하는데,
+
+Python의 list같은 경우에는 주소의 리스트이기 때문에 서로 다른 타입이 올 수 있다.
+
+참조하면 바로 값이 아니라 주소를 통해서 접근하기 때문에 C보다 성능이 조금 느릴 수 있다.
+
+C의 경우에는 정해진 크기만큼 할당이 되는데,
+
+python list는 정해진 크기가 없고, 크기가 기존에 할당되어있는 것보다 커지면 새로 realloc을 한다.
+
+그래서 크기가 자주 변하는 (점점 커지는) 경우에 list를 써서 계속 `.append`를 한다면 성능 상으로 좋지 않다. (실제로 알고리즘 문제를 풀 때에 시간이 더 오래 걸린다.)
